fix: Admin header / menu layout issues fixed
fixes #802
Logo image, forum name now sized and layed out properly
Streamlined layout styles for the header

--- a/modules/ept-frontend/client/scss/ept/views/layout/_header.scss
+++ b/modules/ept-frontend/client/scss/ept/views/layout/_header.scss
@@ -515,8 +515,22 @@ header {
       }
     }
     #menu.admin-menu {
-      max-width: none;
-      h3 #logo-text { padding-right: 0.8rem; }
+      display: flex;
+
+      .brand {
+        display: flex;
+        align-items: center;
+        font-size: 1.3rem;
+        margin-right: 1rem;
+
+        .brandLogo {
+          width: 2rem;
+          margin-right: 0.5rem;
+          max-height: 2rem;
+        }
+      }
+      
+      // h3 #logo-text { padding-right: 0.8rem; }
       #menu-left {
         float: left;
         .menu-btn, .menu-btn-selected {
@@ -528,7 +542,10 @@ header {
         .menu-btn-selected { background-color: $header-dropdown-bg-color; border-bottom: 2px solid $color-primary; }
       }
       #menu-right {
-        float: right;
+        display: flex;
+        flex: 1 0 auto;
+        justify-content: flex-end;
+
         li:first-child, li:nth-child(2n) {
           padding-right: 0.8rem;
           a {
@@ -539,7 +556,6 @@ header {
         }
       }
     }
-
   }
 
   #breadcrumbs-wrap {
